--- a/lectures/Reading and Writing to File.ipynb
+++ b/lectures/Reading and Writing to File.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6a9ffa2e",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d166b46c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "09a35ae9",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "093c5610",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "04ca114a",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,10 @@
     "## open the file in write mode\n",
     "## write the line \"A third line, might be fine\"\n",
     "## close the file when you're done\n",
-    "\n"
+    "\n",
+    "file = open(\"new_file.txt\",\"w\")\n",
+    "file.write(\"A third line, might be fine.\\n\")\n",
+    "file.close()"
    ]
   },
   {
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b4abd70e",
    "metadata": {},
    "outputs": [],
@@ -176,10 +179,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bf02a291",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code\n",
     "## Create a .csv file called \"my_first_data.csv\"\n",
@@ -189,12 +203,14 @@
     "## Hint: don't forget the \\n!\n",
     "\n",
     "\n",
-    "# column names\n"
+    "# column names\n",
+    "file = open(\"my_first_data.csv\",\"w+\")\n",
+    "file.write(\"x,y,z\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f697dda2",
    "metadata": {},
    "outputs": [],
@@ -213,6 +229,8 @@
     "## as strs before writing them to file\n",
     "## don't forget the \\n!\n",
     "\n",
+    "for i in range(len(x)):\n",
+    "    file.write(str(x[i]) + \",\" + str(y[i]) + \",\" + str(z[i]) + \"\\n\")\n",
     "\n",
     "file.close()"
    ]
@@ -237,10 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7380b519",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A third line, might be fine.\n",
+      "A new line, we won't overwrite the old lines this time!\n"
+     ]
+    }
+   ],
    "source": [
     "## open the file to read it with \"r\"\n",
     "file = open(\"new_file.txt\", \"r\")\n",
@@ -250,13 +277,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e0650d7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## You code\n",
-    "## try to reread the file's contents using .read()\n"
+    "## try to reread the file's contents using .read()\n",
+    "\n",
+    "print(file.read())"
    ]
   },
   {
@@ -273,10 +310,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "825eca2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Go back to the 0th item in the string\n",
     "## aka the beginning of the file's contents\n",
@@ -285,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0b951177",
    "metadata": {},
    "outputs": [],
@@ -293,24 +341,35 @@
     "## You code\n",
     "## let's try this again store the output of file.read()\n",
     "## in a variable called file_text\n",
-    "\n"
+    "\n",
+    "file_text = file.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "926e2ec6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A third line, might be fine.\n",
+      "A new line, we won't overwrite the old lines this time!\n"
+     ]
+    }
+   ],
    "source": [
     "## You code\n",
     "## print file_text with a print statement to check it worked\n",
-    "\n"
+    "\n",
+    "print(file_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "014ce96f",
    "metadata": {},
    "outputs": [],
@@ -321,34 +380,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1388ae60",
    "metadata": {},
    "outputs": [],
    "source": [
     "## You code\n",
-    "## open your file \"my_first_data.csv\" in \"r\"ead mode\n"
+    "## open your file \"my_first_data.csv\" in \"r\"ead mode\n",
+    "\n",
+    "file = open(\"my_first_data.csv\",\"r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8618d9ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['x,y,z\\n', '1,2,1\\n', '2,4,8\\n', '3,6,27\\n', '4,8,64\\n']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code\n",
-    "## see what the readlines() command does\n"
+    "## see what the readlines() command does\n",
+    "\n",
+    "file.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "66022081",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## close the file\n"
+    "## close the file\n",
+    "\n",
+    "file.close()"
    ]
   },
   {
@@ -426,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
