--- a/lectures/Writing Functions.ipynb
+++ b/lectures/Writing Functions.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a26e37c9",
    "metadata": {},
    "outputs": [],
@@ -53,10 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9415651d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello there.\n"
+     ]
+    }
+   ],
    "source": [
     "## To call the function, just type the functions name\n",
     "## with parantheses\n",
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "eb796f70",
    "metadata": {},
    "outputs": [],
@@ -73,15 +81,26 @@
     "## You code\n",
     "## Write your own function called general_kenobi\n",
     "## When called it should print the string \"General Kenobi.\"\n",
-    "\n"
+    "\n",
+    "def general_kenobi():\n",
+    "    print(\"General Kenobi.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f8e0c862",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "General Kenobi.\n",
+      "Hello there.\n"
+     ]
+    }
+   ],
    "source": [
     "## You code\n",
     "# call general_kenobi then hello_there\n",
@@ -104,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1e831dc3",
    "metadata": {},
    "outputs": [],
@@ -116,10 +135,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "efa2acb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## A 2 should be returned\n",
     "make_two()"
@@ -127,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "68943079",
    "metadata": {},
    "outputs": [],
@@ -135,7 +165,9 @@
     "## You code \n",
     "## Write a function that returns the number 3\n",
     "## call it make_three\n",
-    "\n"
+    "\n",
+    "def make_three():\n",
+    "    return 3"
    ]
   },
   {
@@ -150,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "401447fd",
    "metadata": {},
    "outputs": [],
@@ -172,20 +204,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7337f38e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code\n",
     "## run weird_divison a few times with different inputs\n",
     "## and see what happens\n",
-    "\n"
+    "\n",
+    "weird_division(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7349c9f7",
    "metadata": {},
    "outputs": [],
@@ -195,9 +239,33 @@
     "## and returns the string \n",
     "## \"even\" or \"odd\" depending on whether it is\n",
     "## even or odd\n",
-    "\n",
+    "def even_odd(x):\n",
+    "    if x%2==0:\n",
+    "        return print(\"even\")\n",
+    "    else:\n",
+    "        return print(\"odd\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4903758d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd\n",
+      "even\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_odd(7)\n",
+    "even_odd(12)"
    ]
   },
   {
@@ -214,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "08055c4a",
    "metadata": {},
    "outputs": [],
@@ -230,10 +298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "743936de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. 3 is not divisble by 2\n",
+      "Yes. 3 is divisible by 3\n",
+      "Yes. 3 is divisible by 3\n"
+     ]
+    }
+   ],
    "source": [
     "## let's first call divisible_by using any integer for x\n",
     "## and keeping y at the default value of 2\n",
@@ -251,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "28284cca",
    "metadata": {},
    "outputs": [],
@@ -260,31 +338,57 @@
     "## write a function that can take in three numbers x, y, and z\n",
     "## and multiply them\n",
     "## have z default to 17\n",
-    "\n"
+    "\n",
+    "def multhree(x, y, z=17):\n",
+    "    return x*y*z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "481e9f2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "476"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code\n",
     "## now call that function and use the default value for z\n",
-    "\n"
+    "\n",
+    "multhree(4,7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "91854084",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code\n",
     "## now call that function and change the value of z\n",
-    "\n"
+    "\n",
+    "multhree(4, 7, 2)"
    ]
   },
   {
@@ -301,13 +405,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "5ac34374",
    "metadata": {},
    "outputs": [],
    "source": [
     "## running this makes apple a global variable\n",
-    "apple = 10"
+    "apple = 10\n",
+    "banana = 8"
    ]
   },
   {
@@ -322,14 +427,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "0e54ef1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Within dumb_function 'apple' is a local variable\n",
     "def dumb_function(apple):\n",
-    "    print(apple)"
+    "    print(\"apple =\", apple)\n",
+    "    print(\"banana =\", banana)"
    ]
   },
   {
@@ -342,10 +448,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "884064d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple = peanut butter\n",
+      "banana = 8\n"
+     ]
+    }
+   ],
    "source": [
     "## STOP\n",
     "## Before running this, what do you think the output will be?\n",
@@ -355,10 +470,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "1e8e9ff9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## We can check that apple, the global variables\n",
     "## was unchanged by our running of dumb_function\n",
@@ -377,10 +503,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "307688ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(x)>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## The syntax of a lambda function is\n",
     "## lambda arguments: expression\n",
@@ -390,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "ce2acfc1",
    "metadata": {},
    "outputs": [],
@@ -402,25 +539,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "ef8aedfa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "166"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "double(83)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "601d651d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(x)>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## You code\n",
     "## Write a lambda function for multiplying a number by 5\n",
     "\n",
-    "\n"
+    "lambda x: x*5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "48a989eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "by_5 = lambda x: x*5\n",
+    "by_5(30)"
    ]
   },
   {
@@ -478,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
