--- a/practice-problems/Functions.ipynb
+++ b/practice-problems/Functions.ipynb
@@ -20,13 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
-    "\n",
+    "def weird_sum(x, y, z):\n",
+    "    return x - y + z\n",
+    "weird_sum(1,2,3)\n",
     "\n"
    ]
   },
@@ -39,14 +52,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Code here\n",
     "\n",
-    "\n",
+    "def linef(x, y):\n",
+    "    if y > x+2:\n",
+    "        return print(\"The point (\" + str(x) + \",\" + str(y) + \")\" + \" is above the line y=x+2\")\n",
+    "    else:\n",
+    "        return print(\"The point (\" + str(x) + \",\" + str(y) + \")\" + \" is below the line y=x+2\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The point (3,5) is below the line y=x+2\n"
+     ]
+    }
+   ],
+   "source": [
+    "linef(3,5)"
    ]
   },
   {
@@ -58,14 +92,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "def str_check(x):\n",
+    "    if type(x)==str:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
-    "\n"
+    "print(str_check(4))\n",
+    "print(str_check(\"hola\"))"
    ]
   },
   {
@@ -77,14 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Beatriz\n"
+     ]
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "def hello(name):\n",
+    "    print(\"Hello,\", name)\n",
     "\n",
-    "\n"
+    "hello(\"Beatriz\")"
    ]
   },
   {
@@ -96,14 +155,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "def pfunction(x,p):\n",
+    "    if x < p:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return 1\n",
     "\n",
-    "\n"
+    "pfunction(6,5)\n"
    ]
   },
   {
@@ -119,38 +194,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9650.0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "def tax_income(x):\n",
+    "    if x>=0:\n",
+    "        if x<= 9875:\n",
+    "            return 9875 * 0.1\n",
+    "        if x>9875 and x<=40125:\n",
+    "            return 987.5 + 0.12 * (x-9875)\n",
+    "        if x>40125 and x<=85525:\n",
+    "            return 4617.5 + 0.22 * (x-40125)\n",
+    "        if x>85525 and x<=163300:\n",
+    "            return 14605.5 + 0.24 * (x-85525)\n",
+    "        if x>163300 and x<=207350:\n",
+    "            return 33271.5 + 0.32 * (x-163300)\n",
+    "        if x>207350 and x<=518400:\n",
+    "            return 47367.5 + 0.35 * (x-207350)\n",
+    "        else:\n",
+    "            return 156235 + 0.37 * (x-518400)\n",
+    "    if x<0:\n",
+    "        return print(\"Please insert a positive amount\")\n",
     "\n",
-    "\n"
+    "tax_income(63000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please insert a positive amount\n"
+     ]
+    }
+   ],
    "source": [
-    "## Code here\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Code here\n",
-    "\n",
-    "\n",
-    "\n"
+    "tax_income(-10)"
    ]
   },
   {
@@ -166,37 +263,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1366421888703013"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "def approx_pi(N):\n",
+    "    return sum([8/((4*i + 1)*(4*i + 3)) for i in range(N+1)])\n",
+    "    \n",
+    "approx_pi(100)        \n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.136642188870299"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Code here\n",
-    "\n",
-    "\n",
+    "def loop_pi(N):\n",
+    "    total=0\n",
+    "    for i in range(N+1):\n",
+    "        total += 8/((4*i + 1)*(4*i + 3))\n",
+    "    return total\n",
+    "loop_pi(100)\n",
     "\n"
    ]
   },
@@ -209,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,14 +338,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple': 2,\n",
+       " 'banana': 1,\n",
+       " 'computer': 2,\n",
+       " 'programming': 1,\n",
+       " 'language': 1,\n",
+       " 'Obama': 1,\n",
+       " 'Bush': 1,\n",
+       " 'Trump': 1,\n",
+       " 'Eisenhower': 1,\n",
+       " 'president': 4,\n",
+       " 'dog': 2,\n",
+       " 'cat': 1,\n",
+       " 'duck': 2,\n",
+       " 'goose': 1,\n",
+       " 'baseball': 1,\n",
+       " 'basketball': 1,\n",
+       " 'football': 1,\n",
+       " 'hockey': 1,\n",
+       " 'soccer': 1,\n",
+       " 'sports': 1,\n",
+       " 'lebron': 1,\n",
+       " 'james': 1,\n",
+       " 'darius': 1,\n",
+       " 'garland': 1}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Code here\n",
     "\n",
+    "def count_dict(wordlist):\n",
+    "    mydict={}\n",
+    "    for word in wordlist:\n",
+    "        if word in mydict.keys():\n",
+    "            mydict[word]=mydict[word]+1\n",
+    "        else:\n",
+    "            mydict[word]=1\n",
+    "    return mydict\n",
     "\n",
-    "\n"
+    "count_dict(sample_words)"
    ]
   },
   {
@@ -292,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
